# Semantic-VSLAM

./: .gitignore  CMakeLists.txt  README.md
data/: kitti_00_calib.yaml
examples/: analyze_matches.cpp  generate_tracking_video.cpp  generate_trajectory.cpp  run_kitti.cpp  test_matching.cpp  test_visual_odometry.cpp
include/core/: camera.h  frame.h
include/frontend/: feature_matcher.h  visual_odometry.h
scripts/: CMakeCache.txt  Makefile  cmake_install.cmake  plot_trajectory.py
src/core/: camera.cpp  frame.cpp
src/frontend/: feature_matcher.cpp  visual_odometry.cpp
test/: test_camera.cpp
